--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "express": "^4.14.0",
     "express-handlebars": "^3.0.0",
     "express-myconnection": "^1.0.4",
-    "mysql": "^2.11.1"
+    "mysql": "^2.11.1",
+    "request": "^2.74.0",
+    "superagent": "^2.2.0"
   }
 }
